Collection manifest parsing

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "vite build"
+    "build": "vite build",
+    "test": "vitest"
   },
   "exports": {
     ".": "./dist/index.js",
@@ -27,7 +28,8 @@
   },
   "devDependencies": {
     "vite": "^6.2.2",
-    "vite-plugin-dts": "^4.5.3"
+    "vite-plugin-dts": "^4.5.3",
+    "vitest": "^3.0.8"
   },
   "dependencies": {
     "@iiif/parser": "^2.1.7",
