--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@iiif/parser": "^2.1.7",
     "@iiif/presentation-3": "^2.2.3",
-    "p-throttle": "^7.0.0"
+    "p-throttle": "^7.0.0",
+    "uuid": "^11.1.0"
   }
 }
