--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cozy-iiif",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "A developer-friendly collection of abstractions and utilities built on top of @iiif/presentation-3 and @iiif/parser",
   "license": "MIT",
   "author": "Rainer Simon",
@@ -33,7 +33,7 @@
     "vitest": "^3.1.4"
   },
   "dependencies": {
-    "@iiif/parser": "^2.1.8",
+    "@iiif/parser": "2.1.7",
     "@iiif/presentation-3": "^2.2.3",
     "p-throttle": "^7.0.0",
     "uuid": "^11.1.0"
