--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cozy-iiif",
-  "version": "0.4.3",
+  "version": "0.5.0",
   "description": "A developer-friendly collection of abstractions and utilities built on top of @iiif/presentation-3 and @iiif/parser",
   "license": "MIT",
   "author": "Rainer Simon",
@@ -28,15 +28,15 @@
     "./level-0": "./dist/level-0/index.js"
   },
   "devDependencies": {
-    "vite": "^6.3.5",
+    "vite": "^6.3.6",
     "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@iiif/parser": "2.2.0",
+    "@iiif/parser": "^2.2.2",
     "@iiif/presentation-3": "^2.2.3",
     "image-size": "^2.0.2",
-    "p-throttle": "^7.0.0",
-    "uuid": "^11.1.0"
+    "p-throttle": "^8.0.0",
+    "uuid": "^13.0.0"
   }
 }
